set new red logo color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     .logo {
       margin: 0 2rem 2rem 2rem;
       max-width: 150px; 
-      fill: #740808;
+      fill: #e91b1b;
       animation-name: heartFadeInOut; 
       animation-iteration-count: infinite;
       animation-duration: 3s;
