--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     .logo {
       margin: 0 2rem 2rem 2rem;
       max-width: 150px; 
-      fill: #e91b1b;
+      fill: #1c1c1c;
       animation-name: heartFadeInOut; 
       animation-iteration-count: infinite;
-      animation-duration: 3s;
+      animation-duration: 9s;
     }
   </style>
 
